[tool.poetry]
name = "repl_nix_lenbot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.1.0"
easy-pil = "^0.1.9"
wavelink = "^1.3.4"
async-timeout = "^4.0.2"
py-cord = "^2.3.2"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
